simplify PublishReleaseRequest
