# openapi/discover-service-internal.yml
@@ -734,8 +734,6 @@ components:
         - name
         - description
         - ownerId
-        - modelCount
-        - recordCount
         - fileCount
         - size
         - license
@@ -760,13 +758,6 @@ components:
         ownerId:
           type: integer
           format: int32
-        modelCount:
-          type: array
-          items:
-            $ref: ./discover-service.yml#/components/schemas/ModelCount
-        recordCount:
-          type: integer
-          format: int64
         fileCount:
           type: integer
           format: int64
